welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:11: error: ';' expected but integer literal found.
    }    cpt += 1;
                ^